--- a/style.css
+++ b/style.css
@@ -31,16 +31,14 @@ header{
     height: 4.4rem;
     background-color: rgb(0, 0, 0, 0.8);
     backdrop-filter: blur(2rem);
-
 }
-
 
 .nav-list{
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 -1rem
+    /* margin: 0 -1rem */
 }
 
 .nav-list-mobile{
@@ -81,14 +79,9 @@ header{
 
 
 .iphone-11-pro{
-
     background: url("./assets/images/hero/iphone-11-pro/iphone_11_pro_large.jpg");
     margin-top: 4.4rem;
 }
-
-
-
-
 
 
 .title{
